--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "face-api.js": "^0.22.2",
     "firebase": "^10.4.0",
     "form-data": "^4.0.0",
+    "numero-a-letras": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "words-to-numbers": "^1.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
